# harmone_ai

./: .gitignore  README.md  agent.py  captions.json  db_config.py  db_models.py  download.py  highlights.json  image_captioning.py  pipeline.py  pyproject.toml  requirements.txt  text_transcript.py  transcription.json  video_speech.ipynb  vision_agent.py
MVP/backend/: app.py  video.ipynb
MVP/frontend/: index.html  indexScript.js  indexStyle.css  main.html  mainStyle.css  manifest.json  modalStyle.css
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  chat.py  connection_manager.py  database.py  history.py  main.py  user.py
backend/app/agent/: __init__.py  agent.py  highlight_agent.py  vision_agent.py
backend/app/crud/: __init__.py  crud_audio.py  crud_frame.py  crud_user.py  crud_video.py  db_config.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  user.py
backend/app/utils/: download.py  extract_frames.py  image_captioning.py  pipeline.py  text_transcript.py
backend/scripts/: script.sh
extention/: background.js  content.js  package.json  webpack.config.js
extention/common/: recorder.js  utils.js  ws.js
extention/source/: background.html  index.html  manifest.json  test.js
frontend/: README.md  mainScript.js  modal.html  modalScript.js  pubspec.yaml
frontend extension/: pubspec.yaml
harmone-extension/: package-lock.json  package.json
harmone_extension_f/: pubspec.yaml
output_audio/: analyzed_contents.txt
server/: chat.py  connectionManager.py  history.py  main.py
(+44 files in other folders)
